--- a/.hintrc
+++ b/.hintrc
@@ -12,6 +12,12 @@
       }
     ],
     "meta-viewport": "off",
-    "button-type": "off"
+    "button-type": "off",
+    "axe/forms": [
+      "default",
+      {
+        "label": "off"
+      }
+    ]
   }
 }
